# hf-agentic

./: .gitignore  Makefile  README.md  pyproject.toml  setup_model.sh
lang_graph/: Makefile  main.py  pyproject.toml  run_groq.py
llama_index/: Makefile  main.py  pyproject.toml  run_groq.py
smolagents/: main.py  pyproject.toml  run_groq.py
