[project]
name = "hf-agentic-setup"
version = "0.1.0"
description = "Shared environment for all AI agent frameworks"
requires-python = ">=3.10"
dependencies = [
    # Common
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=1.11.0",
    "huggingface-hub>=0.15.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.2.1",
    
    # Smolagents
    "smolagents>=1.22.0",
    "smolagents[litellm]",
    "ddgs>=9.6.1",
    
    # LlamaIndex
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-huggingface-api>=0.6.1",
    "llama-index-llms-huggingface>=0.5.0",
    "llama-index-llms-litellm>=0.3.0",
    "llama-index-vector-stores-chroma>=0.5.3",
    "datasets>=4.4.1",
    "chromadb>=1.3.4",
    "nest-asyncio>=1.6.0",
    
    # LangGraph
    "langgraph>=1.0.2",
    "langchain-huggingface>=0.1.0",
    "langchain-groq>=0.2.0",
]

