[project]
name = "llama-index"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-huggingface-api>=0.6.1",
    "llama-index-llms-huggingface>=0.5.0",  # For local model support
    "llama-index-llms-litellm>=0.3.0",  # For Groq API support
    "llama-index-vector-stores-chroma>=0.5.3",
    "python-dotenv>=1.2.1",
    "datasets>=4.4.1",
    "chromadb>=1.3.4",
    "nest-asyncio>=1.6.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=1.11.0",
]
