[project]
name = "smolagents-local"
version = "0.1.0"
description = "Smolagents with local model"
requires-python = ">=3.10"
dependencies = [
    "smolagents>=1.22.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "huggingface-hub>=0.15.0",
    "smolagents>=1.22.0",
    "accelerate>=1.11.0",
    "ddgs>=9.6.1",
    "smolagents[litellm]"
]
